--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name  robotstxt.cn www.robotstxt.cn;
 
     location / {
-        root   /root/www/robots/www;
+        root   /root/www/robotstxt;
         index  index.html;
     }
 }
