--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  robotstxt.cn www.robotstxt.cn;
+    server_name  robotstxt.cn www.robotstxt.cn robotstxt.org.cn www.robotstxt.org.cn;
 
     location / {
         root   /root/www/robotstxt;
