--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "lint": "eslint ./src --fix",
     "prettier": "prettier --write src",
+    "test": "mocha",
+    "coverage": "nyc npm test",
     "lint-staged": "lint-staged",
     "start": "node ./src/robot.js",
     "wash": "node ./src/wash.js",
@@ -17,7 +19,7 @@
     }
   },
   "lint-staged": {
-    "src/*.js": [
+    "[src|test]/*.js": [
       "prettier",
       "eslint"
     ]
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@types/node": "^12",
+    "chai": "^4.3.4",
     "eslint": "^7.28.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
@@ -44,6 +47,8 @@
     "eslint-plugin-promise": "^5.1.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
+    "mocha": "^9.0.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.3.1"
   }
 }
