add https support

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,22 @@
 server {
     listen       80;
-    server_name  robotstxt.cn www.robotstxt.cn robotstxt.org.cn www.robotstxt.org.cn;
+    server_name  robotstxt.org.cn www.robotstxt.org.cn;
 
     location / {
         root   /root/www/robotstxt;
         index  index.html;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    server_name robotstxt.org.cn www.robotstxt.org.cn;
+    ssl on;
+    ssl_certificate /root/httpscert/robotstxt.org.cn/robotstxt.org.cn.pem;
+    ssl_certificate_key /root/httpscert/robotstxt.org.cn/robotstxt.org.cn.key;
+
+    location / {
+        root /root/www/robotstxt;
+        index index.html;
     }
 }
